feature: Jackpot payout entire float